refactor: refactor statistics return format